# fastapi_db_handling

./: .env  .gitignore  pyproject.toml
data/: users.json
src/db_exp/: __init__.py  app.py
src/db_exp/api/v1/: image.py  metadata.py  user.py
src/db_exp/models/: db.py
src/db_exp/models/v1/: user.py
src/db_exp/util/: azure_connector.py  database_manager.py  db_handler.py
util/: generate_data.py
